[package]
name = "avdl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
apache-avro = { git = "https://github.com/apache/avro.git", branch = "master", features=["derive"] }
serde = { default-features = false, version = "1.0.152", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.91", features = ["std"] }
strum = { default-features = false, version = "0.24.1" }
strum_macros = { default-features = false, version = "0.24.3" }

[dev-dependencies]
rstest = "0.16.0" # Todo: move to dev-dependencies

[lib]
path = "src/lib.rs"
