[package]
name = "avrokit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avdl-parser = { path = "../avdl-parser" }
clap = { version = "4.0.32", features = ["derive"] }
apache-avro = { git = "https://github.com/apache/avro.git", branch = "master", features=["derive"] }
serde_json = "1.0"