[package]
name = "cli_to_schemata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avdl-rs = {path = "../.."}
apache-avro = { git = "https://github.com/apache/avro.git", branch = "master", features=["derive"] }
serde_json = "1.0"
